<resources>
    <string name="app_name">My News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_stories_tab">TOP STORIES</string>
    <string name="most_polular_tab">MOST POPULAR</string>
    <string name="business_tab">BUSINESS</string>
    <string name="food_tab">FOOD</string>
    <string name="movies_tab">MOVIES</string>
    <string name="sport_tab">SPORTS</string>
    <string name="tech_tab">TECHNOLOGY</string>
    <string name="travel_tab">TRAVEL</string>
    <string name="search_tab">SEARCH</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="categories">Categories</string>
    <string name="my_news">My News</string>
    <string name="search">Search</string>
    <string name="notfication_menu">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="menu">Menu</string>
    <string name="channel_name">Daily news notification</string>
    <string name="channel_description">A notification every 24h for your search</string>
    <string name="notif_pos_text_1">Good news! There is &#160;</string>
    <string name="notif_pos_text_2">&#160; articles for your &#160;</string>
    <string name="notif_pos_text_3">&#160; Daily Search.</string>
    <string name="notif_neg_text_1">Hello! Sadly there is no new article for your &#160;</string>
    <string name="notif_neg_text_2">&#160; Daily Search. Click here if you want to change your search.</string>
    <string name="copyright">  Copyright © 2019. Aceman. All rights reserved.\nDeveloped by Lionel JOFFRAY.\nData provided by The New York Times API.\nhttps://developer.nytimes.com/</string>
    <string name="copyright_text">Copyright</string>
    <string name="help_title">Help</string>
    <string name="retry">Retry</string>
    <string name="Mynews_logo_desc">Mynews logo</string>
    <string name="check_connexion_image_desc">check connexion image</string>
    <string name="nyt_logo_for_copyright_desc">NYT logo for copyright</string>
    <string name="close">close</string>
    <string name="help_drawer">You can navigate horizontally to the category you want.</string>
    <string name="help_menu_hamburger">Click the hamburger menu for a alternative view of all categories and options.</string>
    <string name="help_search_txt">By clicking this icon, you can search articles by Categories. At least one category must be check to start the search.</string>
    <string name="help_menu_right">This menu open 3 choices to you, notification, help and copyright.</string>
    <string name="embedded_video">Embedded Video on New York Times website</string>
    <string name="many_request">HTTP 429 Too Many Requests</string>
    <string name="many_refresh">Too many request for New York Times, please wait 15 seconds for auto-refresh.</string>
</resources>
